# ElfInspect

./: CMakeLists.txt  a.out  elf32header.c  elf32header.h  elf64header.c  elf64header.h  elf_types.h  elfindo  elfinspect  elfinspect.c  elfinspectd  elfinspectd.c  main.c  write_read.c  write_read.h
elfinspect.dSYM/Contents/: Info.plist
elfinspect.dSYM/Contents/Resources/DWARF/: elfinspect
elfinspect.dSYM/Contents/Resources/Relocations/aarch64/: elfinspect.yml
elfinspectd.dSYM/Contents/: Info.plist
elfinspectd.dSYM/Contents/Resources/DWARF/: elfinspectd
elfinspectd.dSYM/Contents/Resources/Relocations/aarch64/: elfinspectd.yml
elinspect.dSYM/Contents/: Info.plist
elinspect.dSYM/Contents/Resources/DWARF/: elinspect
elinspect.dSYM/Contents/Resources/Relocations/aarch64/: elinspect.yml
